--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-meta-buttons-design",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "authors": [
     "General Electric"
   ],
@@ -12,7 +12,7 @@
     "buttons"
   ],
   "license": "Apache 2",
-  "homepage": "git://github.build.ge.com/PXd/px-meta-buttons-design.git",
+  "homepage": "https://github.build.ge.com/PXd/px-meta-buttons-design.git",
   "private": true,
   "ignore": [
     "**/.*",
@@ -22,7 +22,7 @@
     "tests"
   ],
   "dependencies": {
-    "px-button-group-design": "git://github.build.ge.com/PXd/px-button-group-design.git#~0.3.0",
-    "px-buttons-design": "git://github.build.ge.com/PXd/px-buttons-design.git#~0.4.0"
+    "px-button-group-design": "https://github.build.ge.com/PXd/px-button-group-design.git#~0.3.0",
+    "px-buttons-design": "https://github.build.ge.com/PXd/px-buttons-design.git#~0.4.0"
   }
 }
